--- a/index.html
+++ b/index.html
@@ -96,6 +96,40 @@ td, th {
     opacity: 0.8;
 }
 
+#tab1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+}
+
+/* kg / 회 */
+#tab1 select {
+  width: 120px;
+  height: 36px;
+  font-size: 14px;
+  text-align: center;
+  border-radius: 12px;
+  border: 1px solid #ddd;
+  background: #fff;
+}
+
+/* GO 버튼 */
+#goBtn {
+  width: 120px;
+  height: 36px;
+  border-radius: 14px;
+  border: none;
+  background: #000;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+#goBtn:active {
+  transform: scale(0.97);
+}
 
 /* ===============================
    탭
