--- a/index.html
+++ b/index.html
@@ -106,26 +106,27 @@ td, th {
 /* kg / 회 */
 #tab1 select {
   width: 120px;
-  height: 36px;
+  height: 34px;
   font-size: 14px;
   text-align: center;
-  border-radius: 12px;
-  border: 1px solid #ddd;
-  background: #fff;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  background: transparent;
 }
 
 /* GO 버튼 */
 #goBtn {
   width: 120px;
-  height: 36px;
-  border-radius: 14px;
-  border: none;
-  background: #000;
-  color: #fff;
-  font-size: 13px;
-  font-weight: 600;
-  cursor: pointer;
+  height: 34px;
+  background: transparent;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 20px;
+  font-size: 12px;
+  letter-spacing: 1px;
 }
+
 
 #goBtn:active {
   transform: scale(0.97);
