--- a/index.html
+++ b/index.html
@@ -348,6 +348,17 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     -moz-appearance: textfield; /* Firefox */
 }
+
+   /* ===============================
+   1RM 입력 폭 2/3
+================================ */
+#tab1 select,
+#tab1 button {
+    width: 66%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 </style>
 </head>
 
