--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@ input[type="number"] {
 #tab1 select,
 #tab1 button {
     width: 66%;
+   padding: 9px;          /* 기존 14px → 약 2/3 */
+    font-size: 14px;       /* 기존 18px → 약 2/3 */
     margin-left: auto;
     margin-right: auto;
     display: block;
