--- a/index.html
+++ b/index.html
@@ -365,6 +365,15 @@ input[type="number"] {
     margin-right: auto;
     display: block;
 }
+   #app {
+    width: 100%;
+    max-width: 420px;   /* 폰 느낌 */
+    height: 100vh;
+    overflow-y: auto;
+    background: #111;
+    -webkit-overflow-scrolling: touch;
+}
+
 </style>
 </head>
 
