--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ html, body {
     height: 100%;
     overflow: hidden;  /* 외부 스크롤 제거 */
     background: #111;
+    overscroll-behavior: none; /* 🔥 중요 */
 }
 
 .app {
