--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ html, body {
     box-sizing: border-box;
     overflow-y: auto;               /* 내부 스크롤 허용 */
     -webkit-overflow-scrolling: touch;
+     overscroll-behavior: contain;
 }
 
 .app::-webkit-scrollbar {
