Comment out 1RM result display in index.html
Commented out the line that displays the estimated 1RM result.

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ goBtn.addEventListener('click', ()=>{
     const oneRM = weight * (1 + reps * 0.0333);
 
     // 계산 결과 출력 (사라지지 않음)
-    resultDiv.innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
+   // resultDiv.innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
 
     // 표 생성
     let html = `<table><tr><th>RM</th><th>무게 (kg)</th></tr>`;
