--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ input[type="number"] {
 
 <!-- 1RM -->
 <div id="tab1" class="tabContent active">
-    <select id="weight"></select>
+  <input id="weight" type="number" placeholder="kg">
     <select id="reps"></select>
     <button id="goBtn">GO</button>
     <div id="result"></div>
@@ -526,11 +526,7 @@ const logoutBtn = document.getElementById('logoutBtn');
 const userInfo = document.getElementById('userInfo');
 
 /* 무게/반복 옵션 채우기 (1RM 계산기) */
-for (let w=0; w<=250; w+=5){
-    let option = document.createElement("option");
-    option.value = w; option.textContent = w + " kg";
-    weightSelect.appendChild(option);
-}
+
 for (let r=1; r<=10; r++){
     let option = document.createElement("option");
     option.value = r; option.textContent = r + " 회";
