--- a/index.html
+++ b/index.html
@@ -360,6 +360,14 @@ input[type="number"] {
     margin-right: auto;
     display: block;
 }
+   #weight, #reps, #goBtn {
+    width: 66%;          /* 가로 2/3 */
+    height: 66%;         /* 세로 2/3 */
+    padding: 8px;        /* padding도 줄임 */
+    font-size: 16px;     /* 글자 크기도 적당히 */
+    margin: 10px auto;   /* 가운데 정렬 */
+    display: block;
+}
 </style>
 </head>
 
