--- a/index.html
+++ b/index.html
@@ -573,11 +573,15 @@ goBtn.addEventListener('click', ()=>{
    // resultDiv.innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
 
     // 표 생성
-// 1RM 계산 후 테이블 생성
-let html = `<table class="rmTable">`;  // class 추가
+// 1RM 계산 후 1열 테이블 생성
+let html = `<table>`;
 for (let r=1; r<=10; r++){
     let rmWeight = oneRM / (1 + (r-1)*0.0333);
-    html += `<tr><td>${r}RM: ${rmWeight.toFixed(1)} kg</td></tr>`; // 1열로
+    html += `<tr>
+                <td>
+                    <span style="font-size:14px;">${r}RM</span> &nbsp; ${rmWeight.toFixed(1)}kg
+                </td>
+             </tr>`;
 }
 html += `</table>`;
 
