--- a/index.html
+++ b/index.html
@@ -557,36 +557,36 @@ tabBtns.forEach(btn=>{
     });
 });
 
-/* 1RM 계산 (페이드 제거 완전 수정본) */
-goBtn.addEventListener('click', ()=>{
+
+goBtn.addEventListener('click', ()=> {
     const weight = parseFloat(weightSelect.value);
     const reps = parseInt(repsSelect.value);
 
     if(!weight || !reps){
-        resultDiv.innerHTML = "무게와 반복수를 입력하세요.";
+        tableArea.innerHTML = `<div style="text-align:center;color:#ff5555;margin-top:10px;">
+                                   무게와 반복수를 입력하세요
+                               </div>`;
         return;
     }
 
     const oneRM = weight * (1 + reps * 0.0333);
 
-    // 계산 결과 출력 (사라지지 않음)
-   // resultDiv.innerHTML = `예상 1RM: <b>${oneRM.toFixed(1)} kg</b>`;
+    // 표 없이 그냥 1열로 텍스트 나열
+    let html = '';
+    for (let r=1; r<=10; r++){
+        let rmWeight = oneRM / (1 + (r-1)*0.0333);
+        html += `<div style="
+                        text-align:center;
+                        color:white;
+                        margin:6px 0;
+                        font-size:16px;
+                        font-weight:600;
+                   ">
+                        ${r}RM&nbsp;&nbsp;&nbsp;${rmWeight.toFixed(1)}kg
+                 </div>`;
+    }
 
-    // 표 생성
-// 1RM 계산 후 1열 테이블 생성
-let html = `<table>`;
-for (let r=1; r<=10; r++){
-    let rmWeight = oneRM / (1 + (r-1)*0.0333);
-    html += `<tr>
-                <td>
-                    <span style="font-size:14px;">${r}RM</span> &nbsp; ${rmWeight.toFixed(1)}kg
-                </td>
-             </tr>`;
-}
-html += `</table>`;
-
-tableArea.innerHTML = html;
-
+    tableArea.innerHTML = html;
 });
 
 
