--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ input[type="number"] {
     height: auto;        /* 높이 자동 */
     padding: 8px;        /* 적당히 줄임 */
     font-size: 16px;     /* 글자 크기 */
-    margin: 10px auto;   /* 가운데 정렬 */
+    margin: 30px auto 10px auto;   /* 가운데 정렬 */
     display: block;
     border-radius: 10px; /* 둥글게 유지 */
 }
