--- a/index.html
+++ b/index.html
@@ -364,7 +364,10 @@ input[type="number"] {
     border-radius: 10px; /* 둥글게 유지 */
 }
 
-
+#tableArea {
+    margin-top: 30px;   /* 기존에 없으면 추가 */
+    /* 또는 padding-top: 30px; */
+}
 </style>
 </head>
 
