--- a/index.html
+++ b/index.html
@@ -338,6 +338,15 @@ td, th {
     font-size: 13px;
     font-weight: bold;
 }
+.tabContent {
+  display: none;
+}
+
+.tabContent.active {
+  display: block;
+}
+
+   
 /* 🔥 number input +/- 버튼 제거 */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
