--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 /* ===============================
    🔥 전체 레이아웃 (폰 비율 고정)
 ================================ */
-body { 
+html, body {
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body { 
     background: #111; 
     display: flex;
     justify-content: center; 
