--- a/index.html
+++ b/index.html
@@ -359,6 +359,41 @@ td, th {
 .tabContent.active {
   display: block;
 }
+.googleBtn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  background: #fff;
+  color: #555;
+
+  border: none;
+  border-radius: 14px;
+  padding: 10px 16px;
+
+  font-size: 14px;
+  font-weight: 500;
+
+  box-shadow: 0 4px 10px rgba(0,0,0,0.25);
+  cursor: pointer;
+
+  transition: all 0.2s ease;
+}
+
+.googleBtn img {
+  width: 18px;
+  height: 18px;
+}
+
+.googleBtn:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 6px 14px rgba(0,0,0,0.3);
+}
+
+.googleBtn:active {
+  transform: translateY(0);
+  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+}
 
    
 /* 🔥 number input +/- 버튼 제거 */
@@ -404,7 +439,10 @@ input[type="number"] {
        </div>
     <!-- 오른쪽 로그인 영역 -->
        <div id="loginArea">
-         <button id="googleLoginBtn">Google 로그인</button>
+         <button id="googleLoginBtn" class="googleBtn">
+              <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google">
+              <span>Google 로그인</span>
+            </button>
          <button id="logoutBtn" style="display:none;">로그아웃</button>
        <div id="userInfo"></div>
     </div>
