--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
     justify-content: center; 
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+   overflow: hidden; /* 🔥 핵심 */
 }
 
 .app {
@@ -30,6 +31,7 @@ body {
     background: black;
     padding: 0px 20px 20px;
     box-sizing: border-box;
+    overflow-y: auto;   /* 🔥 내부만 스크롤 */
 }
 
 /* ===============================
