--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
 }
 
 body { 
@@ -27,6 +26,7 @@ body {
 
 .app {
     width: 390px;          /* 아이폰 기준 */
+    height: 100vh;        /* 🔥 min-height ❌ */
     min-height: 100vh;
     background: black;
     padding: 0px 20px 20px;
