--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@ body {
 }
 
 .app {
-    width: 390px;          /* 아이폰 기준 */
-    height: 100vh;        /* 🔥 min-height ❌ */
+    width: 390px;
+    height: 100vh;
     background: black;
-    padding: 0px 20px 20px;
-    box-sizing: border-box;
-    overflow-y: auto;   /* 🔥 내부만 스크롤 */
-   
-   position: relative;
-    overflow-x: hidden; /* 🔥 혹시 모를 튐 방지 */
 
+    padding: 0 20px 20px;
+    box-sizing: border-box;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+    position: relative;
 }
 
 /* ===============================
