--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 
 .app {
     width: 390px;
-    height: 100vh;
+   min-height: 100vh;  
     background: black;
 
     padding: 0 20px 20px;
