--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
    min-height: 100vh;  
     background: black;
 
-    padding: 0 20px 20px;
+    padding: 70px 20px 20px;
     box-sizing: border-box;
 
     overflow-y: auto;
