--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@ body {
    min-height: 100vh;  
     background: black;
 
-    padding: 70px 20px 20px;
+    padding: 0 20px 20px;
     box-sizing: border-box;
 
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
 
-   -webkit-overflow-scrolling: touch; /* 🔥 모바일 필수 */
 }
 
 /* ===============================
