--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@ body {
    
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
-   overflow: hidden; /* 🔥 핵심 */
 }
 
 .app {
     width: 390px;
-   min-height: 100vh;  
-    background: black;
+    height: 100vh;          /* 🔥 min-height ❌ */
+    margin: 0 auto;
 
+    background: black;
     padding: 0 20px 20px;
     box-sizing: border-box;
 
-    overflow-y: auto;
+    overflow-y: auto;       /* ✅ 얘만 스크롤 */
     overflow-x: hidden;
-    position: relative;
 
 }
+
 
 /* ===============================
    공통
