--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ html, body {
     margin: 0;
     padding: 0;
     width: 100%;
+
+   
+    height: 100%;
+    overflow: hidden;
 }
 
 body { 
@@ -35,6 +39,9 @@ body {
     overflow-x: hidden;
 -ms-overflow-style: none;  /* IE, Edge */
     scrollbar-width: none;     /* Firefox */
+
+   
+    -webkit-overflow-scrolling: touch;
 }
 
 .app::-webkit-scrollbar {
