--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 -ms-overflow-style: none;  /* IE, Edge */
     scrollbar-width: none;     /* Firefox */
 
-   
+    overscroll-behavior-y: contain;
     -webkit-overflow-scrolling: touch;
 }
 
