--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ body {
     overflow-x: hidden;
 -ms-overflow-style: none;  /* IE, Edge */
     scrollbar-width: none;     /* Firefox */
+   
+    -webkit-overflow-scrolling: touch;
 
 }
 
