--- a/index.html
+++ b/index.html
@@ -315,6 +315,10 @@ td, th {
     background: transparent;
     cursor: default;
 }
+.cal-date,
+.cal-muscle {
+    background: transparent !important;
+}
 
 
 
