--- a/index.html
+++ b/index.html
@@ -416,17 +416,21 @@ td, th {
 }
 
 .cal-date {
+   position: absolute;
+    top: 6px;
+    left: 8px;
     font-size: 16px;
     font-weight: 600;
 }
 
 .cal-muscle {
     position: absolute;
-    top: 6px;
-    right: 6px;
-    font-size: 10px;
-    opacity: 0.85;
+    bottom: 6px;   /* 🔽 아래 */
+    right: 6px;    /* ▶ 오른쪽 */
+    font-size: 8px; /* 🔥 날짜의 1/2 */
+    opacity: 0.9;
     color: #fff;
+    white-space: nowrap;
 }
 
    
